[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/intro_screen/IntroScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/font.tres" type="DynamicFont" id=2]

[node name="IntroScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="root" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="root"]
margin_left = 710.0
margin_top = 340.0
margin_right = 1210.0
margin_bottom = 740.0
rect_min_size = Vector2( 500, 400 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.952941 )

[node name="VBoxContainer" type="VBoxContainer" parent="root"]
margin_left = 788.0
margin_top = 368.0
margin_right = 1132.0
margin_bottom = 712.0
size_flags_horizontal = 6
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblLevel" type="Label" parent="root/VBoxContainer"]
margin_right = 344.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.756863, 0.701961, 0.0941176, 1 )
text = "Level"
align = 1

[node name="lblLevelNum" type="Label" parent="root/VBoxContainer"]
margin_top = 58.0
margin_right = 344.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblFloaters" type="Label" parent="root/VBoxContainer"]
margin_top = 116.0
margin_right = 344.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.262745, 0.552941, 0.65098, 1 )
text = "Floaters"

[node name="lblFloatersNum" type="Label" parent="root/VBoxContainer"]
margin_top = 174.0
margin_right = 344.0
margin_bottom = 228.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="lblAttempts" type="Label" parent="root/VBoxContainer"]
margin_top = 232.0
margin_right = 344.0
margin_bottom = 286.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0588235, 0.690196, 0.172549, 1 )
text = "ATTEMPTS"
align = 1

[node name="lblAttemptsNum" type="Label" parent="root/VBoxContainer"]
margin_top = 290.0
margin_right = 344.0
margin_bottom = 344.0
custom_fonts/font = ExtResource( 2 )
align = 1
